# showcase

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: clippy-fmt.yml  linux.yml
config/: config.toml
src/: ctx.rs  main.rs  routes.rs  settings.rs
src/static/: index.js  protected.html  success.html
