[package]
name = "mcaptcha-showcase"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix = "0.13"
actix-http = "3.0.4"

sqlx = { version = "0.5.13", features = [ "runtime-actix-rustls", "postgres", "time", "offline" ] }
argon2-creds = { branch = "master", git = "https://github.com/realaravinth/argon2-creds"}
config = "0.11"
validator = { version = "0.15", features = ["derive"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"

url = { version = "2.2", features = ["serde"]}
urlencoding =  "2.1.0"

pretty_env_logger = "0.4"
log = "0.4"

reqwest = { version  = "0.11.10", features = ["json"]}

[dependencies.actix-web-codegen-const-routes]
git = "https://github.com/realaravinth/actix-web-codegen-const-routes"

[build-dependencies]
sqlx = { version = "0.5.13", features = [ "runtime-actix-rustls", "postgres", "time", "offline" ] }
